Fixed a few things to make SPECTRE compliant (mostly) with JDK9